force-app/main/default/objects/C_I_References__mdt/C_I_References__mdt.object-meta.xml
<CustomObject>
    <label>C&amp;I Reference</label>
    <pluralLabel>C&amp;I References</pluralLabel>
</CustomObject>