force-app/main/default/objects/C_I_References__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SANDBOX</fullName>
            </value>
            <value>
                <fullName>prd</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
                <default>true</default>
                <label>UAT</label>
            </value>
            <value>
                <fullName>PERFTEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>