force-app/main/default/objects/C_I_References__mdt/fields/NYMEX_INDEX__c.field-meta.xml
<CustomField>
    <fullName>NYMEX_INDEX__c</fullName>
    <label>NYMEX INDEX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>