force-app/main/default/objects/C_I_References__mdt/fields/Share_Directory__c.field-meta.xml
<CustomField>
    <fullName>Share_Directory__c</fullName>
    <label>Share Directory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>